--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,12 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
         with:
           cache-read-only: false
-#
-#      - name: Run tests with Gradle Wrapper
-#        run: ./gradlew check
+
+      - name: Run tests with Gradle Wrapper
+        run: ./gradlew check
 
       - name: Generate kover coverage report
         run: ./gradlew koverXmlReport
-
-      - name: Debug Kover Report Directory
-        run: ls -R ${{ github.workspace }}
 
       - name: Add coverage report to PR
         id: kover
@@ -53,50 +50,50 @@ jobs:
           min-coverage-changed-files: 80
           coverage-counter-type: LINE
 
-#  lint-checks:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout project sources
-#        uses: actions/checkout@v4
-#
-#      - name: Create local.properties
-#        run: echo "${{secrets.LOCAL_PROPERTIES }}" > $GITHUB_WORKSPACE/local.properties
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'temurin'
-#          java-version: '17'
-#          cache: 'gradle'
-#
-#      - name: Setup Gradle
-#        uses: gradle/actions/setup-gradle@v4
-#        with:
-#          cache-read-only: false
-#
-#      - name: Run lint checks with Gradle Wrapper
-#        run: ./gradlew ktlintCheck
+  lint-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v4
 
-#  build-gradle-project:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout project sources
-#        uses: actions/checkout@v4
-#
-#      - name: Create local.properties
-#        run: echo "${{secrets.LOCAL_PROPERTIES }}" > $GITHUB_WORKSPACE/local.properties
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'temurin'
-#          java-version: '17'
-#          cache: 'gradle'
-#
-#      - name: Setup Gradle
-#        uses: gradle/actions/setup-gradle@v4
-#        with:
-#          cache-read-only: false
-#
-#      - name: Run build with Gradle Wrapper
-#        run: ./gradlew buildBeta
+      - name: Create local.properties
+        run: echo "${{secrets.LOCAL_PROPERTIES }}" > $GITHUB_WORKSPACE/local.properties
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-read-only: false
+
+      - name: Run lint checks with Gradle Wrapper
+        run: ./gradlew ktlintCheck
+
+  build-gradle-project:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout project sources
+        uses: actions/checkout@v4
+
+      - name: Create local.properties
+        run: echo "${{secrets.LOCAL_PROPERTIES }}" > $GITHUB_WORKSPACE/local.properties
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-read-only: false
+
+      - name: Run build with Gradle Wrapper
+        run: ./gradlew buildBeta
