--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -86,6 +86,7 @@ buildconfig = "5.5.1"
 napier = "2.7.1"
 uri = "0.0.19"
 multiplatfrom-settings = "1.3.0"
+compose-markdown = "0.5.7"
 
 [libraries]
 # test
@@ -241,6 +242,7 @@ firebase-messaging-ktx = { group = "com.google.firebase", name = "firebase-messa
 google-firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebase-database" }
 napier = { group = "io.github.aakira", name = "napier", version.ref = "napier" }
 uri = { group = "com.eygraber", name="uri-kmp", version.ref = "uri" }
+compose-markdown = { group = "com.github.jeziellago", name = "compose-markdown", version.ref ="compose-markdown" }
 
 # multiplatform settings
 multiplatform-settings = { group = "com.russhwolf", name="multiplatform-settings", version.ref = "multiplatfrom-settings" }
