--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -4,17 +4,13 @@ on:
   push:
     branches: [main]
 
-  # Temporary: Allow manual workflow run for PR testing
-  # ToDo Remove after merge
-  workflow_dispatch:
-
 jobs:
   update-contributors:
     runs-on: ubuntu-latest
 
     # Grant write access for the workflow to update repo with Streeekers
     permissions:
-      contents:
+      contents: write
 
     steps:
       - name: Update Contributors List
